Adicionado api-gateway como interface unica de entrada

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,7 +13,14 @@ services:
 
   pedido-service:
     build: ./pedido-service
-    ports:
-      - "4000:4000"
+    #Porta comentada para garantir a exposição somente da api-gateway(porta 3000)
+    #ports:
+    #  - "4000:4000"
     depends_on:
       - rabbitmq
+  api-gateway:
+    build: ./api-gateway
+    ports:
+      - "3000:3000"
+    depends_on:
+      - pedido-service
